# loco-rs-directory-test

./: Cargo.toml  myapp_development.sqlite-shm  myapp_development.sqlite-wal
apps/webapp/: Cargo.toml
apps/webapp/config/: test.yaml
apps/webapp/migration/: Cargo.toml
apps/webapp/src/mailers/: auth.rs
config/: development.yaml
crates/webapp/: Cargo.toml
crates/webapp/src/mailers/: auth.rs
