[workspace]
resolver = "2"
members = [
  # "crates/*",
  "apps/webapp",
  "apps/webapp/migration"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.14.0" }
async-std = "1"
async-trait = "0.1.74"
axum = "0.8.1"
chrono = "0.4"
fluent-templates = "0.8.0"
include_dir = "0.7"
insta = "1.34.0"
regex = "1.11.1"
rstest = "0.21.0"
sea-orm = "1.1.0"
sea-orm-migration = "1.1.0"
serde = "1"
serde_json = "1"
serial_test = "3.1.1"
tokio = { version = "1.33.0", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
unic-langid = "0.9.4"
uuid = "1.6.0"
validator = "0.19"
